--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -65,4 +65,17 @@ ext {
 
   domainTestDependencies = [junit      : "junit:junit:${jUnitVersion}",
                             mockito    : "org.mockito:mockito-core:${mockitoVersion}"]
+
+  presentationDependencies =
+      [supportAppCompatV7 : "com.android.support:appcompat-v7:${supportVersion}",
+       supportDesign      : "com.android.support:design:${supportVersion}",
+       butterKnife        : "com.jakewharton:butterknife:${butterKnifeVersion}",
+       butterKnifeCompiler: "com.jakewharton:butterknife-compiler:${butterKnifeVersion}",
+       supportAnnotations : "com.android.support:support-annotations:${supportVersion}",
+       daggerCompiler     : "com.google.dagger:dagger-compiler:${daggerVersion}",
+       dagger             : "com.google.dagger:dagger:${daggerVersion}",
+       javaxAnnotation    : "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
+       javaxGlassfish     : "org.glassfish:javax.annotation:${javaxGlassfish}",
+       rxAndroid          : "io.reactivex:rxandroid:${rxAndroidVersion}",
+       glide              : "com.github.bumptech.glide:glide:${glideVersion}"]
 }
