--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -52,6 +52,14 @@ dependencies {
   compile presentationDependencies.butterKnife
   apt presentationDependencies.butterKnifeCompiler
 
+  // Dagger 2
+  apt presentationDependencies.dagger
+  compile presentationDependencies.daggerCompiler
+  compile presentationDependencies.javaxGlassfish
+
+  // Places
+  compile 'com.google.android.gms:play-services-places:9.6.1'
+
   androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
     exclude group: 'com.android.support', module: 'support-annotations'
   })
