--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -31,7 +31,19 @@ android {
     multiDexEnabled true
   }
 
+  signingConfigs {
+    debug {
+      storeFile file('../buildsystem/debug.keystore')
+      storePassword 'android'
+      keyAlias 'androiddebugkey'
+      keyPassword 'android'
+    }
+  }
+
   buildTypes {
+    debug {
+      signingConfig signingConfigs.debug
+    }
     release {
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -58,7 +70,9 @@ dependencies {
   compile presentationDependencies.javaxGlassfish
 
   // Places
-  compile 'com.google.android.gms:play-services-places:9.6.1'
+  compile presentationDependencies.places
+  
+  compile presentationDependencies.supportDesign
 
   androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
     exclude group: 'com.android.support', module: 'support-annotations'
