--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ allprojects {
     ext {
         androidApplicationId = 'xyz.gonzapico.cabifytt'
         androidVersionCode = 1
-        androidVersionName = "0.1"
+        androidVersionName = "0.20161115"
 
         testApplicationId = 'xyz.gonzapico.cabify.test'
     }
